// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsing expressions > parsing add expression 1`] = `
OperatorExpressionNode {
  "left": VariableExpressionNode {
    "variable": "a",
  },
  "operator": "+",
  "right": VariableExpressionNode {
    "variable": "b",
  },
}
`;

exports[`parsing expressions > parsing annotate expression 1`] = `
AnnotateExpressionNode {
  "expression": NumberExpressionNode {
    "value": "3.14",
  },
  "type": NamedTypeNode {
    "name": "Number",
    "parameters": [],
  },
}
`;

exports[`parsing expressions > parsing as expression 1`] = `
AsExpressionNode {
  "left": VariableExpressionNode {
    "variable": "x",
  },
  "right": NamedTypeNode {
    "name": "T",
    "parameters": [],
  },
}
`;

exports[`parsing expressions > parsing block expression 1`] = `
BlockExpressionNode {
  "statements": [
    ExpressionStatementNode {
      "comments": [],
      "expression": VariableExpressionNode {
        "variable": "foo",
      },
    },
  ],
}
`;

exports[`parsing expressions > parsing call expression 1`] = `
CallExpressionNode {
  "function": VariableExpressionNode {
    "variable": "f",
  },
  "inputs": [
    VariableExpressionNode {
      "variable": "x",
    },
    VariableExpressionNode {
      "variable": "y",
    },
  ],
}
`;

exports[`parsing expressions > parsing complex apply expression 1`] = `
OperatorExpressionNode {
  "left": CallExpressionNode {
    "function": VariableExpressionNode {
      "variable": "a",
    },
    "inputs": [
      VariableExpressionNode {
        "variable": "b",
      },
    ],
  },
  "operator": ".",
  "right": CallExpressionNode {
    "function": VariableExpressionNode {
      "variable": "c",
    },
    "inputs": [
      VariableExpressionNode {
        "variable": "d",
      },
    ],
  },
}
`;

exports[`parsing expressions > parsing complex input function expression 1`] = `
FunctionExpressionNode {
  "inputs": [
    ConstructorPatternNode {
      "constructorName": "X",
      "elements": [
        VariablePatternNode {
          "variable": "y",
        },
      ],
    },
  ],
  "output": VariableExpressionNode {
    "variable": "z",
  },
}
`;

exports[`parsing expressions > parsing complex intrinsic expression 1`] = `
IntrinsicExpressionNode {
  "inputs": [
    VariableExpressionNode {
      "variable": "x",
    },
    VariableExpressionNode {
      "variable": "y",
    },
  ],
  "name": "message",
}
`;

exports[`parsing expressions > parsing complex is expression 1`] = `
IsExpressionNode {
  "left": VariableExpressionNode {
    "variable": "x",
  },
  "right": ConstructorPatternNode {
    "constructorName": "Some",
    "elements": [
      NumberPatternNode {
        "value": "3.14",
      },
    ],
  },
}
`;

exports[`parsing expressions > parsing do expression 1`] = `
DoExpressionNode {
  "input": VariableExpressionNode {
    "variable": "foo",
  },
}
`;

exports[`parsing expressions > parsing empty block expression 1`] = `
BlockExpressionNode {
  "statements": [],
}
`;

exports[`parsing expressions > parsing empty collection expression 1`] = `
CollectionExpressionNode {
  "elements": [],
}
`;

exports[`parsing expressions > parsing format expression 1`] = `
FormatExpressionNode {
  "inputs": [
    VariableExpressionNode {
      "variable": "name",
    },
  ],
  "segments": [],
  "string": "Hello, _!",
  "trailing": "",
}
`;

exports[`parsing expressions > parsing multi input function expression 1`] = `
FunctionExpressionNode {
  "inputs": [
    VariablePatternNode {
      "variable": "x",
    },
    VariablePatternNode {
      "variable": "y",
    },
  ],
  "output": VariableExpressionNode {
    "variable": "z",
  },
}
`;

exports[`parsing expressions > parsing multiline collection expression 1`] = `
CollectionExpressionNode {
  "elements": [
    VariableExpressionNode {
      "variable": "a",
    },
    VariableExpressionNode {
      "variable": "b",
    },
    VariableExpressionNode {
      "variable": "c",
    },
  ],
}
`;

exports[`parsing expressions > parsing number expression 1`] = `
NumberExpressionNode {
  "value": "3.14",
}
`;

exports[`parsing expressions > parsing simple apply expression 1`] = `
OperatorExpressionNode {
  "left": VariableExpressionNode {
    "variable": "x",
  },
  "operator": ".",
  "right": VariableExpressionNode {
    "variable": "f",
  },
}
`;

exports[`parsing expressions > parsing simple intrinsic expression 1`] = `
IntrinsicExpressionNode {
  "inputs": [],
  "name": "message",
}
`;

exports[`parsing expressions > parsing simple is expression 1`] = `
IsExpressionNode {
  "left": VariableExpressionNode {
    "variable": "x",
  },
  "right": ConstructorPatternNode {
    "constructorName": "None",
    "elements": [],
  },
}
`;

exports[`parsing expressions > parsing single element collection expression 1`] = `
CollectionExpressionNode {
  "elements": [
    VariableExpressionNode {
      "variable": "a",
    },
  ],
}
`;

exports[`parsing expressions > parsing single input function expression 1`] = `
FunctionExpressionNode {
  "inputs": [
    VariablePatternNode {
      "variable": "x",
    },
  ],
  "output": VariableExpressionNode {
    "variable": "y",
  },
}
`;

exports[`parsing expressions > parsing single line collection expression 1`] = `
CollectionExpressionNode {
  "elements": [
    VariableExpressionNode {
      "variable": "a",
    },
    VariableExpressionNode {
      "variable": "b",
    },
    VariableExpressionNode {
      "variable": "c",
    },
  ],
}
`;

exports[`parsing expressions > parsing string expression 1`] = `
StringExpressionNode {
  "value": "abc",
}
`;

exports[`parsing expressions > parsing structure expression 1`] = `
StructureExpressionNode {
  "fields": [
    StructureExpressionField {
      "name": "a",
      "value": VariableExpressionNode {
        "variable": "b",
      },
    },
    StructureExpressionField {
      "name": "c",
      "value": VariableExpressionNode {
        "variable": "d",
      },
    },
  ],
  "name": "Foo",
}
`;

exports[`parsing expressions > parsing variable expression 1`] = `
VariableExpressionNode {
  "variable": "foo",
}
`;

exports[`parsing expressions > parsing when expression 1`] = `
WhenExpressionNode {
  "arms": [
    Arm {
      "pattern": VariablePatternNode {
        "variable": "a",
      },
      "value": VariableExpressionNode {
        "variable": "b",
      },
    },
    Arm {
      "pattern": VariablePatternNode {
        "variable": "c",
      },
      "value": VariableExpressionNode {
        "variable": "d",
      },
    },
  ],
  "input": VariableExpressionNode {
    "variable": "x",
  },
}
`;
